--- a/chat.html
+++ b/chat.html
@@ -14,7 +14,7 @@
       ul li { padding: 5px 10px; }
       ul { margin-bottom: 10px }
     </style>
-    <title>新規登録</title>
+    <title>Chat App</title>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="/socket.io/socket.io.js"></script>
 </head>
